--- a/charts/argo/values.yaml
+++ b/charts/argo/values.yaml
@@ -2,3 +2,14 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
+argo-cd:
+  dex:
+    enabled: false
+
+  server:
+    extraArgs:
+      - --insecure
+    ingress:
+      enabled: true
+      hosts:
+        - argocd.localhost
