--- a/charts/argo/Chart.yaml
+++ b/charts/argo/Chart.yaml
@@ -24,6 +24,11 @@ version: 0.1.0
 appVersion: "0.0.0"
 
 dependencies:
+  - name: minio
+    repository: https://charts.min.io/
+    version: 3.4.4
+    condition: minio.enabled
+
   - name: argo-cd
     version: 3.27.1
     repository: https://argoproj.github.io/argo-helm
