--- a/charts/argo/Chart.yaml
+++ b/charts/argo/Chart.yaml
@@ -32,3 +32,4 @@ dependencies:
   - name: argo-cd
     version: 3.27.1
     repository: https://argoproj.github.io/argo-helm
+    condition: argo-cd.enabled
