minimalistic setup for minio
Signed-off-by: reinvantveer <rein@vantveer.me>

--- a/charts/argo/values.yaml
+++ b/charts/argo/values.yaml
@@ -18,5 +18,21 @@ argo-cd:
 minio:
   enabled: true
 
+  mode: standalone
+
+  # Tweak the size of the disk usage for storage
   persistence:
     size: 5Gi
+
+  replicas: 1
+
+  resources:
+    requests:
+      memory: 128Mi
+
+  buckets:
+   - name: argo-logs
+     policy: none
+     # Purge if bucket exists already
+     purge: false
+     versioning: false
