add console ingress for inspection/debugging
Signed-off-by: reinvantveer <rein@vantveer.me>

--- a/charts/argo/values.yaml
+++ b/charts/argo/values.yaml
@@ -30,6 +30,12 @@ minio:
     requests:
       memory: 128Mi
 
+  consoleIngress:
+    enabled: true
+    path: /
+    hosts:
+      - minio.localhost
+
   buckets:
    - name: argo-logs
      policy: none
