--- a/charts/argo/values.yaml
+++ b/charts/argo/values.yaml
@@ -46,12 +46,10 @@ minio:
       secretKey: console123
       policy: consoleAdmin
 
-#  buckets:
-#   - name: argo-logs
-#     policy: none
-#     # Purge if bucket exists already
-#     purge: false
-#     versioning: false
+  buckets:
+   - name: argo
+     policy: none
+     purge: false
 
 postgresql:
   enabled: true
