--- a/charts/argo/Chart.yaml
+++ b/charts/argo/Chart.yaml
@@ -27,14 +27,19 @@ dependencies:
   - name: minio
     repository: https://charts.min.io/
     version: 3.4.4
-    condition: minio.enabled
+    condition: argo-workflows.enabled
 
   - name: postgresql
     repository: https://charts.bitnami.com/bitnami
     version: 10.14.2
-    condition: postgresql.enabled
+    condition: argo-workflows.enabled
+
+  - name: argo-workflows
+    repository: https://argoproj.github.io/argo-helm
+    version: 0.9.4
+    condition: argo-workflows.enabled
 
   - name: argo-cd
-    version: 3.27.1
     repository: https://argoproj.github.io/argo-helm
+    version: 3.27.1
     condition: argo-cd.enabled
