--- a/charts/argo/values.yaml
+++ b/charts/argo/values.yaml
@@ -1,6 +1,6 @@
-# Default values for argo.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
+global:
+  argoServerHost: &ref_argoServerHost
+    argo.localhost
 
 argo-cd:
   enabled: true
