WIP: archive the workflow logs by default
Signed-off-by: reinvantveer <rein@vantveer.me>

--- a/charts/argo/values.yaml
+++ b/charts/argo/values.yaml
@@ -89,6 +89,9 @@ argo-workflows:
       - data
       - operators
 
+    workflowDefaults:
+      archiveLogs: true
+
     # Set up database connection details for workflow archive
     persistence:
       connectionPool:
