--- a/charts/argo/values.yaml
+++ b/charts/argo/values.yaml
@@ -137,4 +137,4 @@ argo-workflows:
         key: rootPassword
       insecure: true
       bucket: argo
-      endpoint: http://argo-minio:9000
+      endpoint: argo-minio:9000
