add standard path as keyFormat to s3 artifact storage config
Signed-off-by: reinvantveer <rein@vantveer.me>

--- a/charts/argo/values.yaml
+++ b/charts/argo/values.yaml
@@ -145,3 +145,10 @@ argo-workflows:
       insecure: true
       bucket: argo
       endpoint: argo-minio:9000
+      # See also: https://github.com/argoproj/argo-workflows/blob/master/docs/workflow-controller-configmap.yaml#L101
+      keyFormat: "logs\
+              /{{workflow.creationTimestamp.Y}}\
+              /{{workflow.creationTimestamp.m}}\
+              /{{workflow.creationTimestamp.d}}\
+              /{{workflow.name}}\
+              /{{pod.name}}"
