--- a/charts/argo/values.yaml
+++ b/charts/argo/values.yaml
@@ -77,6 +77,12 @@ postgresql:
 argo-workflows:
   enabled: true
 
+  workflow:
+    rbac:
+      create: true
+    serviceAccount:
+      create: true
+
   server:
     ingress:
       enabled: true
