Minio does not appear to function properly with docker container runtime executor, we're using the fancy emissary executor instead
Signed-off-by: reinvantveer <reinvantveer@gmail.com>

--- a/charts/argo/values.yaml
+++ b/charts/argo/values.yaml
@@ -98,6 +98,9 @@ argo-workflows:
     secure: false
 
   controller:
+    # See also https://github.com/argoproj/argo-helm/tree/master/charts/argo-workflows#workflow-controller-1
+    containerRuntimeExecutor: emissary
+
     workflowNamespaces:
       - operators
       - data
