extra comment on where workflow subchart config starts
Signed-off-by: reinvantveer <reinvantveer@gmail.com>

--- a/charts/argo/values.yaml
+++ b/charts/argo/values.yaml
@@ -74,6 +74,7 @@ postgresql:
   postgresqlUsername: postgres
   postgresqlPassword: postgres
 
+# Argo Server and Argo Workflows configuration
 argo-workflows:
   enabled: true
 
