add argo-workflow service account as default to all workflows
Signed-off-by: reinvantveer <reinvantveer@gmail.com>

--- a/charts/argo/values.yaml
+++ b/charts/argo/values.yaml
@@ -108,6 +108,7 @@ argo-workflows:
 
     workflowDefaults:
       archiveLogs: true
+      serviceAccountName: argo-workflow
 
     # Set up database connection details for workflow archive
     persistence:
