add service accounts for all default used namespaces
Signed-off-by: reinvantveer <reinvantveer@gmail.com>

--- a/charts/argo/values.yaml
+++ b/charts/argo/values.yaml
@@ -166,3 +166,9 @@ argo-workflows:
 
 argo-events:
   enabled: true
+
+  additionalSaNamespaces:
+    - operators
+    - data
+
+  singleNamespace: false
