--- a/charts/argo/templates/eventsource-crd.yml
+++ b/charts/argo/templates/eventsource-crd.yml
@@ -1,3 +1,4 @@
+{{- if index .Values "argo-events" "enabled" }}
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
@@ -38,3 +39,4 @@ spec:
           type: object
       subresources:
         status: {}
+{{- end }}
