--- a/charts/argo-event-based-operator/templates/crds/dataset-crd.yaml
+++ b/charts/argo-event-based-operator/templates/crds/dataset-crd.yaml
@@ -2,9 +2,9 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: geodatasets.antfield.nl
+  name: geodatasets.api.antfield.nl
 spec:
-  group: antfield.nl
+  group: api.antfield.nl
   names:
     kind: GeoDataset
     listKind: GeoDatasetList
@@ -26,12 +26,9 @@ spec:
             spec:
               type: object
               required:
-                - name
                 - source
                 - target
               properties:
-                name:
-                  type: string
                 source:
                   type: string
                 target:
