add missing service account to `data` namespace
Signed-off-by: reinvantveer <reinvantveer@gmail.com>

--- a/charts/argo-event-based-operator/templates/geodata-sa.yaml
+++ b/charts/argo-event-based-operator/templates/geodata-sa.yaml
@@ -1,5 +1,8 @@
+{{- range $namespace := .Values.geodata.namespaces }}
 ---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ $.Values.geodata.serviceAccount.name }}
+  namespace: {{ $namespace }}
+{{- end }}
