--- a/charts/argo-event-based-operator/templates/geodata-role.yaml
+++ b/charts/argo-event-based-operator/templates/geodata-role.yaml
@@ -16,4 +16,15 @@ rules:
       - get
       - list
       - watch
+  # Grant rights to operate on workflows
+  - apiGroups:
+      - argoproj.io
+    resources:
+      - workflows
+    verbs:
+      - get
+      - create
+      - list
+      - watch
+      - patch
 {{- end }}
