--- a/charts/argo-event-based-operator/templates/role.yaml
+++ b/charts/argo-event-based-operator/templates/role.yaml
@@ -1,17 +1,15 @@
-{{- range $namespace := .Values.geodata.namespaces }}
+{{- range $namespace := .Values.customResourceDefinition.namespaces }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: {{ template "argo-event-based-operator.fullname" $ }}-geodata
-    {{- with $namespace }}
-  namespace: {{ . }}
-    {{- end }}
+  name: {{ template "argo-event-based-operator.fullname" $ }}-{{ $.Values.customResourceDefinition.kind | lower }}
+  namespace: {{ $namespace }}
 rules:
   - apiGroups:
       - api.antfield.nl
     resources:
-      - geodatasets
+      - {{ $.Values.customResourceDefinition.kind | lower }}s
     verbs:
       - get
       - list
